k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mediassist
  labels:
    app: mediassist
