k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analysis-service
  namespace: mediassist
spec:
  selector:
    app: analysis-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: mediassist
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
